# aegis

./: .env.example  .gitignore  AGENTS.md  CODE_REVIEW.md  DESIGN.md  README.md  REVIEW_LOG.md  SPEC.md  pyproject.toml
configs/: aegis.example.toml
configs/profiles/: mvp.toml  oncall.toml  standard.toml
docs/: architecture.md  cost.md  security.md
openspec/: project.md
openspec/changes/always-on-dogfood/: proposal.md
openspec/changes/cascaded-stt-tts/: proposal.md
openspec/changes/custom-hey-aegis-wake/: proposal.md
openspec/changes/gpt-live-adapter/: proposal.md
openspec/changes/hybrid-text-tool-session/: proposal.md
openspec/changes/tray-presence/: proposal.md
openspec/specs/cli/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/daemon-ipc/: spec.md
openspec/specs/llm-providers/: spec.md
openspec/specs/mcp/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/privacy-security/: spec.md
openspec/specs/product/: spec.md
openspec/specs/session/: spec.md
openspec/specs/settings-ui/: spec.md
openspec/specs/tools-policy/: spec.md
openspec/specs/wake-activation/: spec.md
scripts/: dev-run.sh  install-user-service.sh  yubikey-diagnose.sh  yubikey-fix-access.sh
src/aegis/: __init__.py  __main__.py  activation.py  cli.py  daemon.py  ipc.py
src/aegis/approval/: __init__.py  broker.py  modes.py
src/aegis/audio/: __init__.py  capture.py  devices.py  pipeline.py  playback.py  resampler.py  vad.py
src/aegis/audit/: __init__.py  log.py
src/aegis/config/: __init__.py  env.py  load.py  paths.py  profiles.py  save.py  schema.py
src/aegis/llm/: __init__.py  aws_sigv4.py  azure.py  bedrock.py  chat_session.py  chatgpt_oauth.py  (+2 more)
systemd/: aegis.service
tests/adversarial/: test_shell_policy.py
tests/unit/: test_activation.py  test_approval_broker.py  test_approval_cli.py  test_approval_default.py  test_audio_devices_capture.py  test_audit.py  test_capture_playback_mock.py  test_cli.py  test_cli_config.py  test_cli_more.py  test_cli_status_daemon.py  test_config.py  test_context_ui_tray.py  test_cost_context.py  test_coverage_boost.py  test_coverage_boost2.py  test_coverage_boost3.py  test_coverage_boost4.py  test_daemon.py  test_daemon_approval_ipc.py  test_daemon_wake.py  test_devices_full.py  test_executor.py  test_executor_cap.py  test_executor_timeout.py  test_fs_more.py  test_fs_tools.py  test_git_tools.py  test_git_write_more.py  test_gpt_live_all_methods.py  test_ipc.py  test_kubectl_exec.py  test_kubectl_policy.py  test_main_module.py  test_mcp_bridge.py  test_multi_llm.py  test_pipeline_offline.py  test_policy_flags.py  test_policy_more.py  test_process_tools.py  (+24 more)
(+56 files in other folders)
